# PdfDriveExtractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pdfdriveextractor/: cleaner.py  cli.py  extractor.py  utils.py  writer.py
