[project]
name = "pdfdriveextractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Rozhak",email = "65714340+RozhakDev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.39.0,<5.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "typer (>=0.20.1,<0.21.0)"
]

[tool.poetry]
packages = [{include = "pdfdriveextractor", from = "src"}]

[tool.poetry.scripts]
pdfdrive-extractor = "pdfdriveextractor.cli:app"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
